# lmms

./: CMakeLists.txt
.travis/: linux..install.sh
cmake/: build_mingw32.sh  build_mingw64.sh
cmake/modules/: BuildPlugin.cmake  DetectMachine.cmake  FindWine.cmake  Win32Toolchain.cmake  Win64Toolchain.cmake
include/: AutomatableModel.h  AutomatableModelView.h  AutomationPattern.h  BBTrack.h  BandLimitedWave.h  BufferManager.h  ComboBoxModel.h  Controller.h  ControllerConnectionDialog.h  EffectChain.h  Fader.h  FileDialog.h  FxMixer.h  Graph.h  Instrument.h  InstrumentPlayHandle.h  LadspaManager.h  LcdSpinBox.h  MainWindow.h  MidiController.h  MidiPort.h  Mixer.h  NotePlayHandle.h  Pattern.h  ProjectRenderer.h  RemotePlugin.h  SampleBuffer.h  Song.h  TabBar.h  Track.h
plugins/Eq/: EqEffect.cpp
plugins/LadspaEffect/: LadspaEffect.cpp
plugins/VstEffect/: VstEffect.cpp  VstEffectControlDialog.cpp
plugins/Xpressive/: Xpressive.cpp
plugins/peak_controller_effect/: peak_controller_effect.cpp
plugins/sf2_player/: sf2_player.cpp
plugins/vestige/: CMakeLists.txt  vestige.cpp
plugins/vst_base/: CMakeLists.txt  RemoteVstPlugin.cpp  VstPlugin.cpp  VstPlugin.h
plugins/vst_base/vstbase/: CMakeLists.txt
src/: CMakeLists.txt
src/core/midi/: MidiController.cpp  MidiPort.cpp
src/gui/: ControllerConnectionDialog.cpp
tests/: CMakeLists.txt
